syntax = "proto3";

package address;

service AddressService {
    rpc FindOne (AddressById) returns (Address) {}
}

message AddressById {
    int32 id = 1;
}

message Address {
    int32 id = 1;
    string estado = 2;
    string cidade = 3;
}